# docker-mlflow

./: .enc.env  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  python-test.yaml
docker_mlflow/: experiment_tracking.py  llm_eval.py  sample.py
