[project]
name = "docker-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3",  # vuln
    "azure-core==1.38.0",  # vuln
    "boto3>=1.36.0",
    "mlflow==3.10.1",
    "psycopg2-binary==2.9.11",
]

[dependency-groups]
dev = [
    "litellm[proxy]==1.81.1",
    "openai>=2.21.0",
    "scikit-learn==1.8.0",
]
