[project]
name = "docker-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.0",
    "mlflow[genai]==3.11.1",
    "psycopg2-binary==2.9.12",
]

[dependency-groups]
dev = [
    "litellm[proxy]==1.83.0",
    "openai>=2.21.0",
    "scikit-learn==1.8.0",
]
