[project]
name = "docker-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.36.0",
    "litellm>=1.83.14",
    "mlflow[genai]==3.12.0",
    "openai>=2.24.0",
    "polars-runtime-32>=1.38.1",
    "psycopg2-binary==2.9.12",
    "pynacl>=1.6.2",
    "pyroscope-io>=0.8.16",
    "soundfile>=0.12.1",
]

[dependency-groups]
dev = [
    "litellm[proxy]==1.83.14",
    "scikit-learn==1.8.0",
]
